--- a/Task-04 To do List/index.html
+++ b/Task-04 To do List/index.html
@@ -4,34 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Form Input Wave</title>
+    <title>Todo List</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Please Login</h1>
-      <form>
-        <div class="form-control">
-          <input type="text" required>
-          <label>Email</label>
-          <!-- <label>
-            <span style="transition-delay: 0ms">E</span>
-              <span style="transition-delay: 50ms">m</span>
-              <span style="transition-delay: 100ms">a</span>
-              <span style="transition-delay: 150ms">i</span>
-              <span style="transition-delay: 200ms">l</span>
-        </label> -->
-        </div>
+    <h1>todos</h1>
+    <form id="form">
+      <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
 
-        <div class="form-control">
-          <input type="password" required>
-          <label>Password</label>
-        </div>
+      <ul class="todos" id="todos"></ul>
+    </form>
+    <small>Left click to toggle completed. <br> Right click to delete todo</small>
 
-        <button class="btn">Login</button>
-
-        <p class="text">Don't have an account? <a href="#">Register</a> </p>
-      </form>
-    </div>
     <script src="script.js"></script>
   </body>
 </html>
